<resources>
    <string name="app_name">IT18256888</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="profilr_management">Profile Management</string>
    <string name="search">Search</string>
    <string name="edit_btn">Edit</string>
    <string name="gender">Gender</string>
    <string name="update">Update Profile</string>
</resources>
